# WutheringWaves

./: .gitignore  LICENSE  README.md  app.py  app.spec  cli.py  main.py  mkdocs.yml  pyproject.toml
assets/css/: custom.css  wuwa.css
data/v1/: echo_list.tsv  echo_skills.tsv
docs/: home.md
docs/app/: home.md
docs/gacha/: file.md
docs/html/: index.en.md  simulated_echo.md  statistics.md
html/: table.jinja2
html/docs/: index.md  resonators.jinja2
html/image/: detailed_calculation.jinja2  resonator_skill_damage_distribution.jinja2  table.jinja2
html/template/: damage_distribution.html  damage_distributions.jinja2  echo.jinja2  output_method.jinja2  resonator.html  resonator.jinja2  resonator_damage_compare.jinja2  resonator_skill_bonus_type_damage_distribution.jinja2  team_damage_compare.jinja2  team_damage_distribution.jinja2
tests/tables/: test_buff.py
ww/: logging.py
ww/calc/: calculated_resonators.py  damage.py  simulated_echoes.py  simulated_resonators.py
ww/commands/: migrate.py  resonator.py  weapon.py
ww/crud/: __init__.py  buff.py  docs.py  echo.py  monster.py  resonator.py  resonator_damage_compare.py  team_damage_compare.py  template.py  weapon.py
ww/data/: resonator.py
ww/docs/: export.py  mkdocs_settings.py
ww/locale/: __init__.py  zh_hant.py  zh_tw.py
ww/model/: __init__.py  buff.py  damage_compare.py  echo.py  echo_skill.py  echoes.py  element.py  monster.py  monsters.py  pool.py  resonator.py  resonator_damage_compare.py  resonator_skill.py  resonators.py  simulation.py  template.py  templates.py  weapon.py
ww/tables/: base.py  buff.py  calculated_resonators.py  crud.py  echo.py  echo_skill.py  echoes.py  monster.py  monsters.py  resonator.py  resonator_skill.py  resonators.py  template.py  templates.py  weapon.py
ww/ui/: __init__.py  button.py  (+9 more)
(+500 files in other folders)
