[tool.poetry]
name = "wutheringwaves"
version = "0.1.0"
description = ""
authors = ["ZetsuBouKyo <116266262+ZetsuBouKyo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
black = "^24.4.2"
html2image = "^2.0.4.3"
jinja2 = "^3.1.4"
pandas = "2.0.3"
pillow = "^10.4.0"
pydantic = "^2.8.2"
pyinstaller = "^6.9.0"
pyside2 = "^5.15.2.1"
pytest = "^8.3.2"
rich = "^13.7.1"
tksheet = "^7.2.12"
typer = "^0.12.3"
mistune = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
